--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hr",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://olajouni.github.io/HRfrontend",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
@@ -10,10 +11,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.33.1",
+    "date-fns": "^2.28.0",
     "install": "^0.13.0",
     "npm": "^8.5.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-big-calendar": "^0.38.9",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
