--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "homepage": "https://olajouni.github.io/HRfrontend",
   "dependencies": {
+    "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
