--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/react": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
@@ -17,13 +18,17 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.33.1",
+    "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "install": "^0.13.0",
+    "json-server": "^0.17.0",
+    "moment": "^2.29.2",
     "npm": "^8.5.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-big-calendar": "^0.38.9",
     "react-datepicker": "^4.7.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
@@ -34,6 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "json-server --watch db.json --port 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
